--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <nav>
             <div class="nav-logo">
-                <a href="index.html"><img width="220px" src="100daysofsummercode_logo.jpg" alt=""></a> 
+                <a href="https://veeteefunk.github.io/100daysofsummercode/"><img width="220px" src="100daysofsummercode_logo.jpg" alt=""></a> 
             </div>
             <ul>
-                <li><a href="about.html">About</a></li>
+                <li><a href="https://www.linkedin.com/in/victor-marin-viloria/" target="_blank">About</a></li>
                 <li><a href="mailto:victormarinviloria@gmail.com">Contact</a></li>
                 <li><a href="https://github.com/veeteefunk" target="_blank">GitHub</a></li>
             </ul>
